--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header>
+  {% include banner.html %}    
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
