--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,43 +1,4 @@
 <header>
-  {% include banner.html %}    
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-            aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-      </div>
-
-      <div class="collapse navbar-collapse" id="navbar-collapse-header-main-menu">
-        <ul class="nav navbar-nav">
-          {% for menu_item in site.menu %}
-          <li><a href="{{ menu_item[1] }}">{{ menu_item[0] }}</a></li>
-          {% endfor %}
-        </ul>
-        <form class="navbar-form navbar-left">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">All posts</a></li>
-              <li><a href="#">Categories</a></li>
-              <li><a href="#">Tags</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
+  {% include top.html %}
+  {% include navbar.html %}
 </header>
